<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AR Exp</string>
    <string name="title_activity">Activity Recognition Experiment</string>
    <string name="button_next">Next</string>

    <!-- For InformationActivity -->
    <string name="title_information_activity">Welcome to Our Experiment</string>
    <string name="welcome_message">Thank you for participating the experiment. The data you provided will be kept confidential and only for research use.</string>
    <string name="enter_info">Please enter your information:</string>
    <string name="info_gender">Gender:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="info_height">Height:</string>
    <string name="height_hint">ft</string>
    <string name="info_incomplete">Please fill in your gender and height!</string>
    <string name="info_height_incomplete">Please fill in your height!</string>
    <string name="info_gender_incomplete">Please fill in your gender!</string>
    <string name="inch">inch</string>

    <!-- For InstructionActivity -->
    <string name="title_instruction_activity">Setup Instructions</string>
    <string name="instruction_attach">Please attach the LPMS-B sensor at your left chest with the labeled orientation.</string>
	<string name="instruction_image_discriptor">An instruction image</string>
    
    <!-- For ConnectionActivity -->
    <string name="title_activity_connection">Connect the Sensor</string>
    <string name="instruction_poweron">Please press the gray button on the sensor to power it on.</string>
    <string name="instruction_connect">Wait until the green light LED is blinking before pressing \"Make Connection\".</string>
    <string name="button_connect">Make Connection</string>
	<string name="connecting">Connecting the sensor</string>
	<string name="connected">Connected</string>
	<string name="connection_failed">Try to connect again</string>
	<string name="debug">Debug mode</string>
    
    <!-- For MainActivity -->
    <string name="title_activity_main">Choose a Activity</string>
    <string name="instruction_activity">Choose activity for detailed instruction and to start</string>
    
    <string name="sitting">Sitting</string>
    <string name="standing">Standing</string>
    <string name="lying">Lying</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="climbing_upstairs">Climbing Upstairs (hand)</string>
    <string name="climbing_downstairs">Climbing Downstairs (hand)</string>
	<string name="climbing_upstairs_pocket">Climbing Upstairs (pocket)</string>
    <string name="climbing_downstairs_pocket">Climbing Downstairs (pocket)</string>
    
    <string name="relative_sitting">Relative motion in Sitting</string>
    <string name="relative_standing">Relative motion in Standing</string>
    <string name="relative_lying">Relative motion in lying</string>
    
    <string name="sitting_with_phone_in_pocket">Sitting with phone in pocket</string>
    <string name="standing_with_phone_in_pocket">Standing with phone in pocket</string>
    <string name="lying_with_phone_in_pocket">Lying with phone in pocket</string>
    <string name="walking_with_phone_in_pocket">Walking with phone in pocket</string>
    
    <string name="button_finished">All finished!</string>
    <string name="button_not_finished">Finish Test</string>
    <string name="title_exit_finished">Congratulations!</string>
    <string name="title_exit_not_finished">Notice!</string>
    <string name="message_exit_finished">You have helped finishing all the activities! Thanks again for participating. Do you want to leave now?</string>
    <string name="message_exit_not_finished">You have not finished all the activities yet. None of the data will be saved. Are you sure you want to exist? </string>
    	
    <!-- For DataColletionActivity -->
    <string name="title_activity_data_collection">Let\'s collect data</string>
    
    <string name="instruction_activity_sitting">Please first sit with phone in hand, and then with phone in pants pocket.</string>
    <string name="instruction_activity_standing">Please first stand with phone in hand, and then with phone in pants pocket.</string>
    <string name="instruction_activity_lying">Please first lay down with phone in hand, and then with phone in pants pocket.</string>
    <string name="instruction_activity_walking">Please walk straight on a level floor in your normal speed with phone in hand, 
        and then with phone in pants pocket.</string>
    <string name="instruction_activity_running">Please run straight on a level floor with your normal speed.</string>
    <string name="instruction_activity_climbing_upstairs">Please Climb up one floor in HFH with your normal speed and press “finish” when done.</string>
    <string name="instruction_activity_climbing_downstairs">Please Climb down one floor with your normal speed and press “finish” when done.</string>
    
    <string name="instruction_activity_relative_sitting">Relative motion in sitting.</string>
    <string name="instruction_activity_relative_standing">Relative motion in standing.</string>
    <string name="instruction_activity_relative_lying">Relative motion in Lying.</string>
    
    <string name="instruction_activity_climbing_upstairs_pocket" >Press start button, 
        then put the phone in your pants left/right pocket. 
        Then climb up one floor, take out the phone and press "finish" when done.</string>
    <string name="instruction_activity_climbing_downstairs_pocket" >Press start button, 
        then put the phone in your pants left/right pocket. 
        Then climb down one floor, take out the phone and press "finish" when done.</string>
        
    <string name="instruction_activity_pocket_sitting">Press start button,  
        then put the phone in your pants left/right pocket. Keep sitting until beep rings.</string>
    <string name="instruction_activity_pocket_lying" >Press start button, 
        then put the phone in your pants left/right pocket. Keep lying until beep rings.</string>
    <string name="instruction_activity_pocket_walking" >Press start button, 
        then put the phone in your pants left/right pocket. Keep walking until beep rings.</string>
    
    
   	<!-- For the Action Bar -->
   	<string name="action_connected">Connected</string>
   	<string name="action_not_connected">Reconnect</string>
   	<string name="action_connecting">Connecting</string>
   	
   	<string name="action_settings">Settings</string>
   	
</resources>
