<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_settings"
		  android:title="@string/action_settings"
		  android:showAsAction="always" 
		  android:enabled="true"/>
        
    <item android:id="@+id/action_connected"
          android:title="@string/action_connected"
          android:showAsAction="always" 
          android:enabled="false"/>
    <item android:id="@+id/action_not_connected"
          android:title="@string/action_not_connected"
          android:showAsAction="always" 
          android:enabled="true"/>
    <item android:id="@+id/action_connecting"
          android:title="@string/action_connecting"
          android:showAsAction="always" 
          android:enabled="false"/>
</menu>
